# AtomicIP-

./: Cargo.toml  README.md  TODO_ISSUES.md  TODO_deployment_guide.md
.github/workflows/: ci.yml  openapi-validate.yml
.kiro/specs/commit-ip-auth-bypass/: .config.kiro  bugfix.md  design.md  tasks.md
api-server/: Cargo.toml
api-server/src/: cache.rs  graphql.rs  handlers.rs  main.rs  schemas.rs  tracing_middleware.rs  versioning.rs
contracts/atomic_swap/src/: arbitration_tests.rs  basic_tests.rs  errors.rs  lib.rs  multi_currency.rs  prop_tests.rs  regression_tests.rs  tests.rs  tests_simple.rs  types.rs  upgrade.rs  validation.rs
contracts/atomic_swap/test_snapshots/basic_tests/tests/: test_cancel_after_accept_sets_status_cancelled.1.json  test_full_swap_lifecycle_initiate_accept_reveal_completed.1.json  test_initiate_swap_rejects_non_owner_seller.1.json
contracts/ip_registry/: Cargo.toml
contracts/ip_registry/src/: basic_tests.rs  lib.rs  test.rs  types.rs  validation.rs
contracts/ip_registry/test_snapshots/test/tests/: test_commit_ip_emits_event.1.json  test_commit_ip_sequential_ids.1.json  test_list_ip_by_owner_returns_all_ids.1.json  test_list_ip_by_owner_unknown_returns_empty.1.json  test_revoke_ip_marks_record_revoked.1.json  test_revoke_ip_requires_owner_auth.1.json  test_revoke_ip_twice_panics.1.json  test_sequential_ip_ids.1.json  test_transfer_ip_requires_owner_auth.1.json  test_verify_commitment_with_invalid_secret_fails.1.json
docs/: api-client-guide.md  api-error-codes.md  backup-recovery-guide.md  deployment-guide.md  disaster-recovery-plan.md  monitoring-guide.md  monitoring-runbook.md  threat-model.md
fuzz/: Cargo.toml  FINDINGS.md
fuzz/corpus/fuzz_batch_commitments/: seed_duplicate_hashes  seed_max_batch
fuzz/fuzz_targets/: fuzz_batch_commitments.rs  fuzz_reveal_partial.rs  fuzz_verify_commitment.rs
monitoring/: grafana-dashboard.json  prometheus-rules.yml
scripts/: activate-dr-site.sh  backup-contract-state.sh  deploy.sh  restore-contract-state.sh  smoke-test.sh  verify-all-services.sh  verify-backup-integrity.sh
